--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer {% if site.scrollappear_enabled %}scrollappear{% endif %}">
-  <p>
-    Chalk is a high quality, completely customizable, performant and 100% free
-    blog template for Jekyll built by
-    <a href="{{ 'about' | relative_url }}" title="About me">Nielsen Ramon</a>. Download it <a href="https://github.com/nielsenramon/chalk" rel="noreferrer noopener" target="_blank" title="Download Chalk">here</a>.
+  <p class="copyright text-muted" style="text-align:center">
+    <br />
+    Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} HeisKen. All rights reserved.
+    <br />
   </p>
 </footer>
