add jekyll-seo-tag plugins

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,9 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1">
-  <title>{{ site.name }} | {{ page.title }}</title>
-  <meta name="description" content="{{ page.description }}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- jekyll seo tag plugins -->
+{% seo %}
 
   <meta property="og:title" content="{{ page.title | escape }}">
   <meta property="og:type" content="website">
