change the config...

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,6 @@
 <footer class="footer {% if site.scrollappear_enabled %}scrollappear{% endif %}">
-  <p class="copyright text-muted" style="text-align:center">
+  <p class="copyright text-muted" style="text-align:center;font-size:5px">
     <br />
-    Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} HeisKen. All rights reserved.
-    <br />
+    Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} Kenneth. All rights reserved.
   </p>
 </footer>
