--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,11 +5,11 @@
 <!-- jekyll seo tag plugins -->
 {% seo %}
 
-  <meta property="og:title" content="{{ page.title | escape }}">
   <meta property="og:type" content="website">
+  <meta property="og:site_name" content="{{ site.name }}">
+  <meta property="og:title" content="{{ page.title | escape }}">
   <meta property="og:url" content="{{ page.url | absolute_url }}">
   <meta property="og:description" content="{{ page.description }}">
-  <meta property="og:site_name" content="{{ site.name }}">
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:url" content="{{ page.url | absolute_url }}">
@@ -29,7 +29,7 @@
     <meta name="twitter:image" content="{{ site.url }}{% asset og-image.jpg @path %}">
   {% endif %}
 
-  <link href="{{ 'feed.xml' | absolute_url }}" type="application/rss+xml" rel="alternate" title="{{ site.name }} Last 10 blog posts" />
+  <link href="{{ 'feed.xml' | absolute_url }}" type="application/rss+xml" rel="alternate" title="{{ page.title | escape }} Last 10 blog posts" />
 
   {% if site.local_fonts %}
     {% asset fonts.css %}
