--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer {% if site.scrollappear_enabled %}scrollappear{% endif %}">
-  <p class="copyright text-muted" style="text-align:center;font-size:12px">
+  <p class="copyright text-muted" style="text-align:center">
     <br />
-    Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }} Kenneth. All rights reserved.
+    Copyright &copy; {{ site.time | date: '%Y' }} Kenneth. All rights reserved.
   </p>
 </footer>
